A classe Main foi autalizada para incluir um codigo que lê um arquivo chamado codigo.ask e passar
as linhas desse arquivo para o Lexer.

A classe ItemsAdicionais foi corrigida.

================================================================================
ANTERIOR
================================================================================

Antes a regra Inicio foi mesclada com a Especialidade. Porém para melhor clareza de código e
coerência com a grammar-rules.txt a regra Especialidade agora é uma regra normal que extends
GrammarRule, e a Regra início passou a ser a classe SyntaxTree, que não extende GrammarRule.

================================================================================
ANTERIOR
================================================================================

PROBLEMA:
Sistema de Exceptions em regras opcionais (que podem ser 'vazias'). O método getNextToken
do SystaxManager (antes chamado de TokenizedCodeManager) é o método que emite erros caso não
encontre o token que está procurando. Porém quando o getNextToken é chamado de dentro de uma regra
opcional, o erro é capturado pelo block catch para que regras opcionais não dêem erro.
O problema é que na regra principal (regra INICIO) as duas ultimas regras são opcionais.
A regra é: (INICIO -> Especialidade  String  String  LISTA_DE_QUESTOES  LISTA_DE_TESTES)
Isso evidencia o problema de que nesse caso um erro nunca será emitido. O compilador vai passar
pelo erro, identificar, mas como é opcional não vai emitir e a interpretação das regras vai
finalizar com sucesso.


SOLUÇÃO MELHOR:
- Remover o SyntaxManager de ser passado como parâmetro
- Remover o SyntaxManager.optionalRule() : SM será criado dentro das regras mas de forma normal:
SyntaxManager sm = new SyntaxManager()
- Remover sistema de stackLevel

A solução consiste em simplesmente:
Todas as regras exceto a inicial irão executar seus códigos dentro de um bloco try-catch.